compiler/testData/diagnostics/tests/resolve/CycleInTypeArgs.kt
class Class1<T : Class2<Class1<<!UNRESOLVED_REFERENCE!>X<!>>>>

class Class2<T : Class1<Class2<<!UNRESOLVED_REFERENCE!>X<!>>>>